--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  # The following adds the Cupertino Icons font to your application.
+    # The following adds the Cupertino Icons font to your application.
   flutter_screenutil: ^1.0.2
   scoped_model: ^1.0.1
   http: ^0.12.0+2
@@ -30,6 +30,7 @@ dependencies:
   flutter_datetime_picker: 1.2.5
   intl: ^0.15.8
   carousel_slider: ^2.0.0
+  firebase_dynamic_links: ^0.5.0+11
   # async package to add additional Cancellable operations
   async: ^2.0.8
   # get it
@@ -41,6 +42,7 @@ dependencies:
   #youtube_player: ^0.6.0
 
   #flutter_secure_storage: ^3.3.1+1
+  flutter_secure_storage: ^3.3.1+1
   image_picker: ^0.6.7
   dio: 3.0.9 #latest version
   #youtube_player: ^0.6.0
@@ -49,10 +51,14 @@ dependencies:
   #flutter_bloc: ^0.20.0
   flutter_youtube: ^2.0.0
   load: ^0.1.6
-  firebase_storage: ^3.0.3
-  camera: ^0.2.1
   path_provider: ^0.4.1
   video_player: ^0.7.2
+  firebase_ml_vision: ^0.6.0+2
+  camera: ^0.5.8+9
+  tflite_flutter: ^0.4.1
+  firebase_storage: ^3.0.3
+  ffi: ^0.1.3
+  image: ^2.1.18
 
 
 dev_dependencies:
@@ -82,6 +88,13 @@ flutter:
     - assets/background1.jpg
     - assets/logo1.png
     - assets/ticket.png
+    - assets/images/ic_flutter_devs_logo.png
+    - assets/images/ic_powered_by.png
+    - assets/images/ic_switch_camera_3.png
+    - assets/images/ic_no_video.png
+    - assets/images/ic_play.png
+    - assets/images/ic_stop_video.png
+    - assets/images/ic_video_shutter.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
