--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,10 @@ dependencies:
   dio: 3.0.9 #latest version
   #youtube_player: ^0.6.0
   rating_dialog: ^1.0.0
-  bloc: ^0.14.4
   #flutter_bloc: ^0.20.0
   flutter_youtube: ^2.0.0
   load: ^0.1.6
-  path_provider: ^0.4.1
+  path_provider: ^1.4.0
   video_player: ^0.7.2
   firebase_ml_vision: ^0.6.0+2
   camera: ^0.5.8+9
@@ -58,6 +57,14 @@ dependencies:
   firebase_storage: ^3.0.3
   ffi: ^0.1.3
   image: ^2.1.18
+  speech_to_text: ^2.7.0
+  alan_voice: ^2.0.7
+  audio_service:
+  flutter_tts: ^1.3.0
+  bloc: ^6.1.0
+  just_audio: ^0.5.5
+  audioplayer: ^0.5.2
+  flutter_webrtc: ^0.4.0
 
 
 dev_dependencies:
