--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   scoped_model: ^1.0.1
   http: ^0.12.0+2
   http_parser: ^3.1.4
-  intl: ^0.15.8
   carousel_slider: ^2.0.0
   firebase_dynamic_links: ^0.5.0+11
   # async package to add additional Cancellable operations
@@ -61,10 +60,12 @@ dependencies:
   alan_voice: ^2.0.7
   audio_service:
   flutter_tts: ^1.3.0
-  bloc: ^6.1.0
   just_audio: ^0.5.5
   audioplayer: ^0.5.2
-  flutter_webrtc: ^0.4.0
+  connectycube_sdk: ^0.5.0
+  firebase_messaging: ^4.0.0+3
+
+
 
 
 dev_dependencies:
