--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,11 @@ dependencies:
   provider: ^3.2.0
   # provider architecture
   provider_architecture: ^1.0.3
-  #youtube_player: ^0.6.0
-
-  #flutter_secure_storage: ^3.3.1+1
-  flutter_secure_storage: ^3.3.1+1
   image_picker: ^0.6.7
   dio: 3.0.9 #latest version
   #youtube_player: ^0.6.0
   rating_dialog: ^1.0.0
   #flutter_bloc: ^0.20.0
-  flutter_youtube: ^2.0.0
   load: ^0.1.6
   path_provider: ^1.4.0
   video_player: ^0.7.2
@@ -57,13 +52,13 @@ dependencies:
   ffi: ^0.1.3
   image: ^2.1.18
   speech_to_text: ^2.7.0
-  alan_voice: ^2.0.7
   audio_service:
   flutter_tts: ^1.3.0
   just_audio: ^0.5.5
   audioplayer: ^0.5.2
   connectycube_sdk: ^0.5.0
   firebase_messaging: ^4.0.0+3
+  tflite: 1.0.4
 
 
 
@@ -102,8 +97,16 @@ flutter:
     - assets/images/ic_play.png
     - assets/images/ic_stop_video.png
     - assets/images/ic_video_shutter.png
-    - assets/background1.png
+    - assets/matbiec.jpg
     - assets/icon_home.png
+    - assets/yolov2_tiny.tflite
+    - assets/yolov2_tiny.txt
+    - assets/ssd_mobilenet.tflite
+    - assets/ssd_mobilenet.txt
+    - assets/mobilenet_v1_1.0_224.tflite
+    - assets/mobilenet_v1_1.0_224.txt
+    - assets/posenet_mv1_075_float_from_checkpoints.tflite
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
